[package]
name = "craftmatch"
version = "0.1.0"
description = "A Tauri App"
authors = ["Szeweq"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "2.0.0-beta", features = [] }

[dependencies]
tauri = {version = "2.0.0-beta", features = [] }
serde = "1.0"
serde_json = "1.0"
rfd = "0.14"
zip = {version = "2.1", default-features = false, features = ["deflate"] }
toml = {version = "0.8", default-features = false, features = ["parse"] }
anyhow = "1.0"
base64 = "0.22"
rayon = "1.10"
cafebabe = "0.7"
state = "0.6"
uuid = {version = "1.8", features = ["v7"] }
byteorder = "1.5"
bytes = "1.6"
once_cell = "1.19"
dirs = "5.0"
opener = {version = "0.7", features = ["reveal"] }
indexmap = {version = "2.2", features = ["rayon"] }
oauth2 = "5.0.0-alpha"
tokio = "1.38"

[lints.clippy]
nursery = {level = "warn", priority = -1}
clone_on_ref_ptr = "warn"
#pedantic = {level = "warn", priority = -1}