[package]
name = "craftmatch"
version = "0.1.0"
description = "A Tauri App"
authors = ["Szeweq"]
edition = "2021"

[workspace]
members = ["pkg-auth", "pkg-jclass", "pkg-zipext"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "2.0.0-rc.0", features = [] }

[workspace.dependencies]
anyhow = "1.0"
byteorder = "1.5"
bytes = "1.6"
oauth2 = "5.0.0-alpha"
serde = "1.0"
serde_json = "1.0"
indexmap = "2.2"
tokio = "1.38"
opener = {version = "0.7", features = ["reveal"] }

[dependencies]
tauri = {version = "2.0.0-rc.0", features = [] }
serde.workspace = true
serde_json.workspace = true
rfd = "0.14"
zip = {version = "2.1", default-features = false, features = ["deflate"] }
toml = {version = "0.8", default-features = false, features = ["parse"] }
anyhow.workspace = true
base64 = "0.22"
rayon = "1.10"
cafebabe = "0.7"
state = "0.6"
uuid = {version = "1.8", features = ["v7"] }
once_cell = "1.19"
dirs = "5.0"
opener.workspace = true
indexmap = {workspace = true, features = ["rayon"] }
tokio.workspace = true
semver = {version = "1.0", features = ["serde"] }
chrono = {version = "0.4", features = ["serde"] }
axum = "0.7"
flate2 = "1.0"
http-range-header = "0.4"

cm-auth = {path = "pkg-auth"}
cm-jclass = {path = "pkg-jclass"}
cm-zipext = {path = "pkg-zipext"}

[lints.clippy]
nursery = {level = "warn", priority = -1}
clone_on_ref_ptr = "warn"
#pedantic = {level = "warn", priority = -1}