[package]
name = "cm-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
oauth2.workspace = true
tokio.workspace = true
opener.workspace = true
indexmap = { workspace = true, features = ["serde"] }
reqwest = { workspace = true, features = ["json"] }

[lints.clippy]
nursery = { level = "warn", priority = -1 }
clone_on_ref_ptr = "warn"
#pedantic = { level = "warn", priority = -1 }
