[package]
name = "cm-zipext"
version = "0.1.0"
edition = "2021"

[dependencies]
zip = { version = "7.1", default-features = false, features = ["deflate"] }
flate2 = "1.0"
anyhow.workspace = true
indexmap.workspace = true

[lints.clippy]
nursery = { level = "warn", priority = -1 }
clone_on_ref_ptr = "warn"
#pedantic = { level = "warn", priority = -1 }
